Mon Mar 29 06:59:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_qt4reactor.mpb:
          New base project, thanks to Marek Brudka <mbrudka at aster dot pl>
          for providing this

Mon Mar 29 06:54:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Pulled in latest files from pkg-ace

Fri Mar 26 14:07:55 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.{h inl cpp}: Refinements to the way notifies
          are handled:
            1. The notify handler was being dispatched multiple times per
               notify; this has been fixed, which increases performance.
            2. Notifications are now dispatched in only one thread at a time.
               This brings more parity to the way notifies are handled in
               other reactor implementations.

Fri Mar 26 13:43:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/tao-utils.install:
          Corrected filenames

        * debianbuild/libtao-orbsvcs-dev.install:
          Added missing libraries

Fri Mar 26 09:02:50 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/run_test.pl:
          Added -l option which allows to run tests selectively.

Wed Mar 24 07:17:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/fuzz.pl:
          Added dds4ccm_trace checks.

Tue Mar 23 10:59:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/patches/34-bts386713.dpatch:
          Updated from debian

Fri Mar 19 16:52:08 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          And another attempt to workaround WFMO reactor. The previous
          changes could break the test on other platforms.

Fri Mar 19 16:44:37 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (find_handler): If the handle isn't